tests/priv-type-alias.chg.stderr

    throw new Error('Todo: ' + what);
    ^

Error: Todo: Alias












